Fixed popup design, so the overflowing content is scrollable

--- a/common/app/styles/partials/popup.scss
+++ b/common/app/styles/partials/popup.scss
@@ -1,58 +1,103 @@
 .popup {
   position: fixed;
-  display: table;
-  left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(33, 53, 71, 0.7);
+  overflow: auto;
   z-index: 90000;
+  > .container {
+    position: absolute;
+    display: table;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
 
-  .verticalCenter {
-    display: table-cell;
-    vertical-align: middle;
-    padding: 0 1em;
-    .container {
-      position: relative;
-      margin: auto;
-      max-width: 35em;
-      min-height: 3em;
-      border-radius: .3em;
-      padding: 1em 1.5em;
-      background-color: #fff;
+    .verticalCenter {
+      display: table-cell;
+      vertical-align: middle;
+      padding: 0 1em;
+      > .container {
+        position: relative;
+        margin: auto;
+        max-width: 35em;
+        min-height: 3em;
+        border-radius: .3em;
+        padding: 1em 1.5em;
+        background-color: #fff;
 
-      .exit {
-        position: absolute;
-        right: 1.5em;
-        width: 1.2em;
-        height: 1.2em;
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-image: url(../images/svg/v3/Cross_green.svg);
-        opacity: .6;
-        cursor: pointer;
-      }
-      .exit:hover {
-        opacity: 1;
-      }
-
-      ul.playlist {
-        li {
-          position: relative;
-          font-size: .9em;
-          background-image: url(../images/svg/v3/Icon_Playlist.svg);
-          background-size: 1.7em 1.7em;
-          background-position: 0 .45em;
+        .exit {
+          position: absolute;
+          right: 1.5em;
+          width: 1.2em;
+          height: 1.2em;
           background-repeat: no-repeat;
-          padding: .5em 0 .5em 2.3em;
+          background-size: contain;
+          background-image: url(../images/svg/v3/Cross_green.svg);
+          opacity: .6;
           cursor: pointer;
         }
-        li:hover {
-          background-color: $colorPopupHover;
+        .exit:hover {
+          opacity: 1;
         }
+
+        ul.playlist {
+          li {
+            position: relative;
+            background-image: url(../images/svg/v3/Icon_Playlist.svg);
+            background-size: 2em 2em;
+            background-position: .4em .4em;
+            background-repeat: no-repeat;
+            padding: .7em 0 .7em 3em;
+            border-radius: .3em;
+            cursor: pointer;
+          }
+          li:hover {
+            background-color: $colorPopupHover;
+          }
+        }
+
+        .dropdown {
+          float: left;
+          width: 100%;
+          > a {
+            > div {
+              display: inline-block;
+              width: 2em;
+              height: 1.4em;
+              margin: -.1em;
+            }
+            display: inline-block;
+            color: #000;
+            cursor: pointer;
+            border-radius: .2em;
+            padding: .4em .8em;
+            border: .1em solid $colorBorders;
+            width: 100%;
+          }
+          > ul > li > a {
+            padding: .2em 0 0 2em !important;
+          }
+          .dropdown-menu {
+            //position: relative;
+            float: none;
+            width: 100%;
+            overflow: hidden;
+          }
+        }
+
+        select {
+          width: 100%;
+          height: 2.4em;
+          background: none;
+          border-radius: .2em;
+          border: .1em solid $colorBorders;
+          padding: 0 .5em;
+        }
+
       }
-
     }
-  }
 
+  }
 }
